--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,13 @@
 websockets>=12.0
 google-generativeai>=0.8.0
 openpyxl>=3.1.2
+aiohttp>=3.9.0
 
 # Audio processing
 numpy>=1.24.0
+
+# LiveKit (for voice agent connection)
+livekit>=0.10.0
 
 # Testing and evaluation
 pytest>=7.4.0
